--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>public</title>
+    <title>PUBLIC</title>
+
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="#">
+
+    <!-- FILES -->
     <script src="/js/server.js"></script>
     <script src="/js/files.js"></script>
 </head>
+
 <body>
-    
+<div id="wrap" style="visibility:hidden;opacity:0">
+    <h1>WRAP</h1>
+
+    <img class="test" src="" data-images-path="/images/ico/next02.svg" alt="">    
+</div>    
 </body>
 </html>
