--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 
 <body>
 <div id="wrap" style="visibility:hidden;opacity:0">
-    <h1>WRAP</h1>
-
-    <img class="test" src="" data-images-path="/images/ico/next02.svg" alt="">    
+    <h1>PUBLIC</h1>    
 </div>    
 </body>
 </html>
