사이트 준비중 LAYER

--- a/etc/layer.html
+++ b/etc/layer.html
@@ -16,13 +16,39 @@
 
 
 
+<!-- 사이트 준비중 -->
+<section id="developing">
+    <div class="content">        
+        <div class="txt">            
+            <p>me2designer.com 개발중입니다.</p>
+            <p>문의사항은 카카오톡 오픈채팅으로 문의부탁드립니다.</p>
+        </div>
+        <div class="list_sns">
+            <a class="link_sns" href="mailto:me2designer@naver.com" target="_blank" title="메일"><img class="mail" src="" data-images-path="/images/sns/mail01.svg"></a>
+            <a class="link_sns" href="https://open.kakao.com/o/sgydGNHd" target="_blank" title="카카오톡 오픈채팅"><img class="kakao" src="" data-images-path="/images/sns/kakaotalk01.svg"></a>
+            <a class="link_sns" href="https://blog.naver.com/hymt18" target="_blank" title="네이버 블로그"><img class="blog" src="" data-images-path="/images/sns/blog01.svg"></a>
+            <a class="link_sns" href="https://github.com/me2designer" target="_blank" title="GitHub"><img class="github" src="" data-images-path="/images/sns/github01.svg"></a>
+            <a class="link_sns" href="https://www.instagram.com/hymt18" target="_blank" title="인스타그램"><img class="instagram" src="" data-images-path="/images/sns/instagram01.svg"></a>            
+        </div>
+        <button class="close" type="button">확 인</button>
+    </div>
+</section>
+
+
+
+<!--
+■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
+-->
+
+
+
 <!-- 동영상 자동 재생 -->
-<div id="videoLayer">
+<section id="videoLayer">
     <h2 class="tit_layer"></h2>
     <div class="contents">        
     </div>
     <i class="close"><img class="ico" src="" data-images-path="/images/ico/close01.svg"></i>
-</div>
+</section>
 
 
 
