--- a/etc/layer.html
+++ b/etc/layer.html
@@ -28,7 +28,7 @@
             <a class="link_sns" href="https://open.kakao.com/o/sgydGNHd" target="_blank" title="카카오톡 오픈채팅"><img class="kakao" src="" data-images-path="/images/sns/kakaotalk01.svg"></a>
             <a class="link_sns" href="https://blog.naver.com/hymt18" target="_blank" title="네이버 블로그"><img class="blog" src="" data-images-path="/images/sns/blog01.svg"></a>
             <a class="link_sns" href="https://github.com/me2designer" target="_blank" title="GitHub"><img class="github" src="" data-images-path="/images/sns/github01.svg"></a>
-            <a class="link_sns" href="https://www.instagram.com/hymt18" target="_blank" title="인스타그램"><img class="instagram" src="" data-images-path="/images/sns/instagram01.svg"></a>            
+            <a class="link_sns" href="https://www.instagram.com/me2designer" target="_blank" title="인스타그램"><img class="instagram" src="" data-images-path="/images/sns/instagram01.svg"></a>            
         </div>
         <button class="close" type="button">확 인</button>
     </div>
