LAYER 사이트개발중 반응형 작업

--- a/etc/layer.html
+++ b/etc/layer.html
@@ -21,7 +21,8 @@
     <div class="content">        
         <div class="txt">            
             <p>me2designer.com 개발중입니다.</p>
-            <p>문의사항은 카카오톡 오픈채팅으로 문의부탁드립니다.</p>
+            <p>문의사항은 카카오톡 오픈채팅으로</p>
+            <p>문의부탁드립니다.</p>
         </div>
         <div class="list_sns">
             <a class="link_sns" href="mailto:me2designer@naver.com" target="_blank" title="메일"><img class="mail" src="" data-images-path="/images/sns/mail01.svg"></a>
