LAYER, videoPlayer() 반응형 적용

--- a/etc/layer.html
+++ b/etc/layer.html
@@ -20,8 +20,10 @@
 <section id="developing">
     <div class="content">        
         <div class="txt">            
-            <p>me2designer.com 개발중입니다.</p>
-            <p>문의사항은 카카오톡 오픈채팅으로</p>
+            <p>me2designer.com은 적응형웹으로 </p>
+            <p>Mobile 버전은 개발중이며, PC에서 접속 후 </p>
+            <p> PC 버전을 확인부탁드립니다.</p>
+            <p>기타 문의사항은 카카오톡 오픈채팅으로</p>
             <p>문의부탁드립니다.</p>
         </div>
         <div class="list_sns">
