--- a/etc/layer.html
+++ b/etc/layer.html
@@ -22,14 +22,14 @@
         <div class="txt">            
             <p>me2designer.com은 적응형웹으로 </p>
             <p>Mobile 버전은 개발중이며, PC에서 접속 후 </p>
-            <p> PC 버전을 확인부탁드립니다.</p>
+            <p>PC 버전을 확인부탁드립니다.</p>
             <p>기타 문의사항은 카카오톡 오픈채팅으로</p>
-            <p>문의부탁드립니다.</p>
+            <p>문의해주세요.</p>
         </div>
         <div class="list_sns">
             <a class="link_sns" href="mailto:me2designer@naver.com" target="_blank" title="메일"><img class="mail" src="" data-images-path="/images/sns/mail01.svg"></a>
             <a class="link_sns" href="https://open.kakao.com/o/sgydGNHd" target="_blank" title="카카오톡 오픈채팅"><img class="kakao" src="" data-images-path="/images/sns/kakaotalk01.svg"></a>
-            <a class="link_sns" href="https://blog.naver.com/hymt18" target="_blank" title="네이버 블로그"><img class="blog" src="" data-images-path="/images/sns/blog01.svg"></a>
+            <!-- <a class="link_sns" href="https://blog.naver.com/hymt18" target="_blank" title="네이버 블로그"><img class="blog" src="" data-images-path="/images/sns/blog01.svg"></a> -->
             <a class="link_sns" href="https://github.com/me2designer" target="_blank" title="GitHub"><img class="github" src="" data-images-path="/images/sns/github01.svg"></a>
             <a class="link_sns" href="https://www.instagram.com/me2designer/" target="_blank" title="인스타그램"><img class="instagram" src="" data-images-path="/images/sns/instagram01.svg"></a>            
         </div>
